# rbmax

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: rbm_ensemble.ipynb
src/rbmax/: data_utils.py  demo.py  model.py
tests/: conftest.py  test_load_data.py
