[project]
name = "RBMax"
version = "0.1.0"
description = "Simple RBM (Restricted Boltzman Machine) implementation in JAX"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Alex Kiefer"},
]
urls = { repository = "..." }

dependencies = [
    "equinox>=0.11.2",
    "jaxtyping>=0.2.23",
    "rich>=14.2.0",
    "numpy>=2.4.1",
]

[project.optional-dependencies]
testing = [
    "coverage==7.3.2",
    "pytest==7.2.0",
]

examples = [
    "jupyter>=1.0",
    "matplotlib>=3.7.1",
    "Pillow>=12.1.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]